# devtool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-save.yml  release.yml  sync-data-branch.yml
data/: prices.db
src/devtool/: __init__.py  cli.py  ote.py
src/ote/: __init__.py  analysis.py  cli.py  dashboard.py  db.py  forecast.py  spot.py  weather.py
tests/: test_analysis.py  test_cli.py  test_db.py  test_forecast.py  test_weather.py
