[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ote"
version = "0.1.0"
description = "CLI nástroj pro zobrazení spotových cen elektřiny z OTE"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
dashboard = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "altair>=5.0.0",
]
analysis = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "altair>=5.0.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]

[project.scripts]
ote = "ote.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/ote --cov-report=term-missing"
